# AutoScholarLoop

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  FEATURE_PARITY.md  SKILLS_INTEGRATION.md  VERSION_LOG.md
skills/autoscholar-direction-review/: SKILL.md
skills/autoscholar-execution-bridge/: SKILL.md
skills/autoscholar-execution-bridge/references/: workspace-contract.md
skills/autoscholar-execution-bridge/scripts/: validate_agent_result.py
skills/autoscholar-experiment-runner/: SKILL.md
skills/autoscholar-field-archive/: SKILL.md
skills/autoscholar-manuscript-builder/: SKILL.md
skills/autoscholar-quality-gate/: SKILL.md
src/open_research_agent/: __init__.py  cli.py
src/open_research_agent/adapters/: execution.py
src/open_research_agent/core/: research_loop.py
src/open_research_agent/skills/: __init__.py  registry.py
tests/: test_smoke.py
web/: server.py
web/src/: App.vue
